compiler/codegen/src/snapshots/rustpython_codegen__compile__tests__if_ors.snap
---
source: compiler/codegen/src/compile.rs
expression: "compile_exec(\"\\\nif True or False or False:\n    pass\n\")"
---
  1           0 LoadConst            (True)
              1 JumpIfTrue           (6)
              2 LoadConst            (False)
              3 JumpIfTrue           (6)
              4 LoadConst            (False)
              5 JumpIfFalse          (6)

  2     >>    6 ReturnConst          (None)
